<resources>
    <string name="app_name">Formula1App</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="user_email">User Email</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="back">Back</string>
    <string name="race_info">Detailed race information</string>
    <string name="race_details">race_details</string>

    <string name="channel_name">Formula 1 Értesítési Csatorna</string>
    <string name="channel_description">Értesítések a Formula 1-eseményekről</string>
</resources>